
- fix visible depth range evaluation, allowing to simplify VR settings and to edit large VR rooms within the LiveUI.
  Note that loading pre-10.8 tables will take a bit longer (until they are saved again with 10.8) due to this, as these need to compute 3D-bounds for each part.

- fix analogue nudge not working for joysticks/gamepads in XInput mode

- fix wrong keyboard characters in dialogs for non QWERTY keyboards

- fix saving of custom keys for joypad input

- fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player

- fix longstanding textbox font size bug

- reflections now work in the interactive camera/light editing mode (F6) as well

- fix overbrightness in F6 (interactive camera/light editing) mode

- fix noise on small-scaled DMDs (e.g. on FSS setups)

- fix swapped red & blue channels when exporting from BMPs

- handle broken tables better and try to load as much as possible

- static element preprocessing is now done on the GPU (which leads to a faster VPX-player start)
- increase preprocessing sample rate for the static parts of the table

- cleanup Light Debugger dialog and fix 2nd color button

- improve script editing performance again

- improve mouse cursor hide/unhide in (windowed) fullscreen

- fix 'O'-key ball debugging

- fix crash if sound card(s) hardware/driver setup changed

- fix crash on tables with weird table info

- fix out of memory crashes (Video capture and Image Manager)

- fix wrong detection of alpha when loading BMPs stored in .vpx

- fix potential multi-threading screw-up when loading textures

- fix changing the timer settings not marking the table as dirty

- fix keyboard navigation in Material dialogue

- fix .bmp export in the Image Manager

- fix gate two-way flag import from VP9/8 .vpts

- improve UI scaling on high resolutions (e.g. 4K)

- update example tables with new raytraced ball shadows enabled and other new features
- add better wood texture
