@@ -194,6 +194,10 @@ private:
    int m_inputApi;   // 0=DirectInput 1=XInput, 2=SDL, 3=IGamecontroller
    int m_rumbleMode; // 0=Off, 1=Table only, 2=Generic only, 3=Table with generic as fallback
 
+   static constexpr int m_LeftMouseButtonID = 25;
+   static constexpr int m_RightMouseButtonID = 26;
+   static constexpr int m_MiddleMouseButtonID = 27;
+
 #ifdef ENABLE_XINPUT
    int m_inputDeviceXI;
    XINPUT_STATE m_inputDeviceXIstate;
